# FileToolkit

./: Pipfile  README.md  filereading.ipynb  setup.cfg
src/filetoolkit/load/: __init__.py  largefile.py
src/filetoolkit/utilities/: chunksize.py  statistics.py
tests/filetoolkit/load/: test_largefile.py
