[metadata]
name = filetoolkit
version = attr: filetoolkit.VERSION
author = Doug McGeehan
author_email = doug@kmnr.org
description = A few Python 3 tools and utilities for handling files.
long_description = file: README.md, LICENSE
keywords = files, ram, ramdisk, progressbar
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src
